# ibkr-sim

./: .gitignore  .python-version  GitHub - Yvictor:TradingGym- Trading and Backtesting environment for training reinforcement learning agent or simple rule base algo..webloc  LICENSE  README.md  pyproject.toml  sim.py  stats.py  test.ipynb  tradedb.py
ibkr-sim/: sim_client.py
ibkr-sim/data/: tradingview.py
ibkr/broker/: ib_sim.py  sim_client.py  sim_contract_sim.py  sim_ib.py  sim_order_sim.py  sim_portfolio_sim.py
ibkr/broker/data/: #contracts.toml  contracts.toml  convert.py
ibkr/strategy/: bb_rsi.py
ibkr_sim/: sim_client.py
src/example/: contract_info.py  sim.py  stats.py  test.ipynb
src/example/data/: contracts.toml
src/ibkr_sim/: sim_client.py  sim_contract_sim.py  sim_ib.py
strategy/: stoch_k.py
